@@ -2,3 +2,4 @@
 __revision__ = None
 yield 1
 
+LAMBDA_WITH_YIELD = lambda: (yield)
